populate categories list + spinner loading categories

--- a/package.json
+++ b/package.json
@@ -9,8 +9,5 @@
     "start": "docker start pg && yarn --cwd server dev && yarn --cwd fe start"
   },
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "eslint-plugin-react-hooks": "^4.6.0"
-  }
+  "license": "ISC"
 }
